--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 3000
+# PORT = 3001
 MONGO_URI = mongodb+srv://notmanxl2169:notmanxl216@cluster0.srklepz.mongodb.net/
 JWT_SECRET_KEY = HOESBEFOREBROS
